# oop_2024

./: .gitignore
lab1/: CMakeLists.txt  Header.h  Source.cpp
lab2/lab2_1/: Movie.h  MovieSeries.cpp  MovieSeries.h  global.cpp  global.h  main.cpp
lab2/lab2_1 (mandatory)/: CMakeLists.txt  Movie.cpp  global.cpp  main.cpp
lab2/lab2_2_1 (extra 1)/: CMakeLists.txt  NumberList.cpp  NumberList.h  main.cpp
lab2/lab2_2_2 (extra 2)/: CMakeLists.txt  Student.cpp  Student.h  global.cpp  global.h  main.cpp
lab3/lab3_1_1 (P1 Math)/: CMakeLists.txt  Math.cpp  Math.h  main.cpp
lab3/lab3_1_2(P1 Canvas)/: CMakeLists.txt  Canvas.cpp  Canvas.h  main.cpp
lab3/lab3_2 ( P2 Canvas)/: CMakeLists.txt  Canvas.cpp  Canvas.h  main.cpp
lab4/Lab4_1 (Sort)/: CMakeLists.txt  Sort.cpp  Sort.h  main.cpp
lab4/Lab4_2 ( MyLibrary)/: CMakeLists.txt  MyLibrary.cpp  MyLibrary.h  main.cpp
lab5/Lab5_1(Number)/: CMakeLists.txt  Number.cpp  Number.h  main.cpp
lab5/Lab5_2 (Complex)/: CMakeLists.txt  Complex.cpp  Complex.h  main.cpp
lab6/Lab6_1(Cars)/: BMW.cpp  BMW.h  CMakeLists.txt  Car.cpp  Car.h  Circuit.cpp  Circuit.h  RangeRover.cpp  RangeRover.h  Seat.cpp  Seat.h  Volvo.cpp  Volvo.h  main.cpp
lab6/Lab6_2(HashManager)/: CMakeLists.txt  CountAsciiHash.h  CountConsonantHash.h  CountVowelsHash.cpp  EasyHash.cpp  HashManager.cpp  HashManager.h  main.cpp  utils.h
lab6/Lab6_2*(HashManager another sol)/: CMakeLists.txt  CountAsciiHash.cpp  CountConsonantHash.cpp  CountVowelsHash.h  EasyHash.h  Hash.h  HashManager.cpp  HashManager.h  utils.cpp
lab6/Lab6_3(Extra  JSON)/: ArrayValue.cpp  ArrayValue.h  BoolValue.cpp  BoolValue.h  CMakeLists.txt  JsonValue.h  NullValue.cpp  NullValue.h  NumberValue.cpp  NumberValue.h  ObjectValue.cpp  ObjectValue.h  StringValue.cpp  StringValue.h  Utils.cpp  Utils.h  main.cpp
lab7/lab7_1 (literals)/: CMakeLists.txt  main.cpp
lab7/lab7_2(tree)/: CMakeLists.txt  ListNode.h  Tree.h  TreeNode.h  main.cpp
lab7/lab7_3(vector)/: CMakeLists.txt  Vector.h  main.cpp
lab9/: CMakeLists.txt  Map.h  main.cpp
subiecte_examene_1/test3/: Adunare.cpp  Adunare.h  CMakeLists.txt  Calculator.cpp  Calculator.h  Impartire.cpp  Impartire.h  Inmultire.cpp  Inmultire.h  Operatie.cpp  Operatie.h  Scadere.cpp  Scadere.h  main.cpp
subiecte_examene_2/Database/: CMakeLists.txt  Database.cpp  Database.h  Entry.cpp  Entry.h  IntegerData.cpp  IntegerData.h  StringData.cpp  StringData.h  main.cpp
subiecte_examene_2/Zoo/: Animal.h  CMakeLists.txt  Cow.cpp  Cow.h  Eagle.cpp  Eagle.h  Feline.h  Lion.cpp  Lion.h  Shark.cpp  Shark.h  Tiger.cpp  Tiger.h  Zoo.cpp  Zoo.h  main.cpp
(+69 files in other folders)
